# substack

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
posts/2023-05-04_VaR/: post_var.ipynb  post_var.py
