[tool.poetry]
name = "substack"
version = "0.1.0"
description = "Exemplo de código python para o substack sobre finanças quantiativas."
authors = ["Saga <silvasmath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
pre-commit = "^3.3.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
pytest = "^7.3.1"
yfinance = "^0.2.18"
matplotlib = "^3.7.1"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
